--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -36,9 +36,10 @@ Suggests:
     rmarkdown,
     testthat (>= 3.0.0),
     vdiffr
+VignetteBuilder: 
+    knitr
 Config/testthat/edition: 3
 Config/testthat/parallel: true
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.1.2
-VignetteBuilder: knitr
