Start working on pull

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,8 @@ S3method(filter,SpatRaster)
 S3method(filter,SpatVector)
 S3method(mutate,SpatRaster)
 S3method(mutate,SpatVector)
+S3method(pull,SpatRaster)
+S3method(pull,SpatVector)
 S3method(replace_na,SpatRaster)
 S3method(replace_na,SpatVector)
 S3method(select,SpatRaster)
@@ -46,6 +48,7 @@ export(slice_cols)
 export(slice_rows)
 importFrom(dplyr,filter)
 importFrom(dplyr,mutate)
+importFrom(dplyr,pull)
 importFrom(dplyr,select)
 importFrom(dplyr,slice)
 importFrom(dplyr,slice_head)
