--- a/NAMESPACE
+++ b/NAMESPACE
@@ -29,6 +29,8 @@ S3method(slice_sample,SpatRaster)
 S3method(slice_sample,SpatVector)
 S3method(slice_tail,SpatRaster)
 S3method(slice_tail,SpatVector)
+S3method(transmute,SpatRaster)
+S3method(transmute,SpatVector)
 export("%>%")
 export(as_coordinates)
 export(as_spatraster)
@@ -56,6 +58,7 @@ importFrom(dplyr,slice_max)
 importFrom(dplyr,slice_min)
 importFrom(dplyr,slice_sample)
 importFrom(dplyr,slice_tail)
+importFrom(dplyr,transmute)
 importFrom(ggplot2,aes)
 importFrom(grDevices,rgb)
 importFrom(grDevices,terrain.colors)
