Add autoplot method

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,6 +2,7 @@
 
 S3method(as_tibble,SpatRaster)
 S3method(as_tibble,SpatVector)
+S3method(autoplot,SpatRaster)
 S3method(drop_na,SpatRaster)
 S3method(drop_na,SpatVector)
 S3method(filter,SpatRaster)
@@ -60,6 +61,7 @@ importFrom(dplyr,slice_sample)
 importFrom(dplyr,slice_tail)
 importFrom(dplyr,transmute)
 importFrom(ggplot2,aes)
+importFrom(ggplot2,autoplot)
 importFrom(grDevices,rgb)
 importFrom(grDevices,terrain.colors)
 importFrom(lifecycle,deprecated)
