Add geom contours

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -37,6 +37,8 @@ export(as_coordinates)
 export(as_spatraster)
 export(compare_spatrasters)
 export(geom_spatraster)
+export(geom_spatraster_contour)
+export(geom_spatraster_contour_filled)
 export(geom_spatraster_rgb)
 export(geom_spatvector)
 export(geom_spatvector_label)
