--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,6 +11,10 @@ S3method(mutate,SpatRaster)
 S3method(mutate,SpatVector)
 S3method(pull,SpatRaster)
 S3method(pull,SpatVector)
+S3method(rename,SpatRaster)
+S3method(rename,SpatVector)
+S3method(rename_with,SpatRaster)
+S3method(rename_with,SpatVector)
 S3method(replace_na,SpatRaster)
 S3method(replace_na,SpatVector)
 S3method(select,SpatRaster)
@@ -51,9 +55,12 @@ export(scale_fill_terrain_d)
 export(slice_colrows)
 export(slice_cols)
 export(slice_rows)
+importFrom(dplyr,everything)
 importFrom(dplyr,filter)
 importFrom(dplyr,mutate)
 importFrom(dplyr,pull)
+importFrom(dplyr,rename)
+importFrom(dplyr,rename_with)
 importFrom(dplyr,select)
 importFrom(dplyr,slice)
 importFrom(dplyr,slice_head)
