--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,6 +11,8 @@ S3method(mutate,SpatRaster)
 S3method(mutate,SpatVector)
 S3method(pull,SpatRaster)
 S3method(pull,SpatVector)
+S3method(relocate,SpatRaster)
+S3method(relocate,SpatVector)
 S3method(rename,SpatRaster)
 S3method(rename,SpatVector)
 S3method(rename_with,SpatRaster)
@@ -59,6 +61,7 @@ importFrom(dplyr,everything)
 importFrom(dplyr,filter)
 importFrom(dplyr,mutate)
 importFrom(dplyr,pull)
+importFrom(dplyr,relocate)
 importFrom(dplyr,rename)
 importFrom(dplyr,rename_with)
 importFrom(dplyr,select)
