--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -20,13 +20,14 @@ Depends:
 Imports: 
     cli (>= 3.0.0),
     crayon,
+    data.table,
     dplyr,
     ggplot2 (>= 3.1.0),
     magrittr,
     rlang,
     scales,
     sf (>= 1.0.0),
-    terra (>= 1.5.0),
+    terra (>= 1.5-12),
     tibble,
     tidyr
 Suggests: 
