--- a/NAMESPACE
+++ b/NAMESPACE
@@ -54,6 +54,9 @@ export(pull_crs)
 export(scale_fill_terrain_b)
 export(scale_fill_terrain_c)
 export(scale_fill_terrain_d)
+export(scale_fill_topo_b)
+export(scale_fill_topo_c)
+export(scale_fill_topo_d)
 export(slice_colrows)
 export(slice_cols)
 export(slice_rows)
