--- a/NAMESPACE
+++ b/NAMESPACE
@@ -56,7 +56,6 @@ export(scale_fill_terrain_c)
 export(scale_fill_terrain_d)
 export(scale_fill_topo_b)
 export(scale_fill_topo_c)
-export(scale_fill_topo_d)
 export(slice_colrows)
 export(slice_cols)
 export(slice_rows)
@@ -77,6 +76,7 @@ importFrom(dplyr,slice_tail)
 importFrom(dplyr,transmute)
 importFrom(ggplot2,aes)
 importFrom(ggplot2,autoplot)
+importFrom(grDevices,adjustcolor)
 importFrom(grDevices,rgb)
 importFrom(grDevices,terrain.colors)
 importFrom(magrittr,"%>%")
