--- a/NAMESPACE
+++ b/NAMESPACE
@@ -49,13 +49,15 @@ export(geom_spatraster_rgb)
 export(geom_spatvector)
 export(geom_spatvector_label)
 export(geom_spatvector_text)
+export(hypso.colors)
 export(is_regular_grid)
 export(pull_crs)
+export(scale_fill_hypso_b)
+export(scale_fill_hypso_c)
+export(scale_fill_hypso_d)
 export(scale_fill_terrain_b)
 export(scale_fill_terrain_c)
 export(scale_fill_terrain_d)
-export(scale_fill_topo_b)
-export(scale_fill_topo_c)
 export(slice_colrows)
 export(slice_cols)
 export(slice_rows)
@@ -76,7 +78,6 @@ importFrom(dplyr,slice_tail)
 importFrom(dplyr,transmute)
 importFrom(ggplot2,aes)
 importFrom(ggplot2,autoplot)
-importFrom(grDevices,adjustcolor)
 importFrom(grDevices,rgb)
 importFrom(grDevices,terrain.colors)
 importFrom(magrittr,"%>%")
