--- a/NAMESPACE
+++ b/NAMESPACE
@@ -58,9 +58,13 @@ export(scale_fill_hypso_d)
 export(scale_fill_terrain_b)
 export(scale_fill_terrain_c)
 export(scale_fill_terrain_d)
+export(scale_fill_whitebox_b)
+export(scale_fill_whitebox_c)
+export(scale_fill_whitebox_d)
 export(slice_colrows)
 export(slice_cols)
 export(slice_rows)
+export(whitebox.colors)
 importFrom(dplyr,everything)
 importFrom(dplyr,filter)
 importFrom(dplyr,mutate)
