--- a/NAMESPACE
+++ b/NAMESPACE
@@ -61,10 +61,14 @@ export(scale_fill_terrain_d)
 export(scale_fill_whitebox_b)
 export(scale_fill_whitebox_c)
 export(scale_fill_whitebox_d)
+export(scale_fill_wiki_b)
+export(scale_fill_wiki_c)
+export(scale_fill_wiki_d)
 export(slice_colrows)
 export(slice_cols)
 export(slice_rows)
 export(whitebox.colors)
+export(wiki.colors)
 importFrom(dplyr,everything)
 importFrom(dplyr,filter)
 importFrom(dplyr,mutate)
