Add cross_blended palettes from https://doi.org/10.14714/CP69.20

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -42,6 +42,7 @@ export("%>%")
 export(as_coordinates)
 export(as_spatraster)
 export(compare_spatrasters)
+export(cross_blended.colors)
 export(geom_spatraster)
 export(geom_spatraster_contour)
 export(geom_spatraster_contour_filled)
@@ -52,6 +53,9 @@ export(geom_spatvector_text)
 export(hypso.colors)
 export(is_regular_grid)
 export(pull_crs)
+export(scale_fill_cross_blended_b)
+export(scale_fill_cross_blended_c)
+export(scale_fill_cross_blended_d)
 export(scale_fill_hypso_b)
 export(scale_fill_hypso_c)
 export(scale_fill_hypso_d)
