--- a/NAMESPACE
+++ b/NAMESPACE
@@ -89,6 +89,7 @@ importFrom(dplyr,slice_sample)
 importFrom(dplyr,slice_tail)
 importFrom(dplyr,transmute)
 importFrom(ggplot2,aes)
+importFrom(ggplot2,alpha)
 importFrom(ggplot2,autoplot)
 importFrom(grDevices,rgb)
 importFrom(grDevices,terrain.colors)
