--- a/NAMESPACE
+++ b/NAMESPACE
@@ -43,6 +43,7 @@ export(as_coordinates)
 export(as_spatraster)
 export(compare_spatrasters)
 export(cross_blended.colors)
+export(cross_blended.colors2)
 export(geom_spatraster)
 export(geom_spatraster_contour)
 export(geom_spatraster_contour_filled)
@@ -51,14 +52,21 @@ export(geom_spatvector)
 export(geom_spatvector_label)
 export(geom_spatvector_text)
 export(hypso.colors)
+export(hypso.colors2)
 export(is_regular_grid)
 export(pull_crs)
 export(scale_fill_cross_blended_b)
 export(scale_fill_cross_blended_c)
 export(scale_fill_cross_blended_d)
+export(scale_fill_cross_blended_tint_b)
+export(scale_fill_cross_blended_tint_c)
+export(scale_fill_cross_blended_tint_d)
 export(scale_fill_hypso_b)
 export(scale_fill_hypso_c)
 export(scale_fill_hypso_d)
+export(scale_fill_hypso_tint_b)
+export(scale_fill_hypso_tint_c)
+export(scale_fill_hypso_tint_d)
 export(scale_fill_terrain_b)
 export(scale_fill_terrain_c)
 export(scale_fill_terrain_d)
