--- a/.github/workflows/pkgdown-gh-pages-clean.yaml
+++ b/.github/workflows/pkgdown-gh-pages-clean.yaml
@@ -22,7 +22,7 @@ jobs:
         with:
           extra-packages: |
             local::.
-            any::pkgdown
+            r-lib/pkgdown
           needs: website
 
       - name: Deploy package
