--- a/.github/workflows/pkgdown-gh-pages.yaml
+++ b/.github/workflows/pkgdown-gh-pages.yaml
@@ -27,7 +27,7 @@ jobs:
         with:
           extra-packages: |
             local::.
-            any::pkgdown
+            r-lib/pkgdown
           needs: website
 
       - name: Deploy package
