Improve facetting for geom_spatraster_contour()
Related with #37

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -5,7 +5,9 @@ Authors@R: c(
     person("Diego", "Hernangómez", , "diego.hernangomezherrero@gmail.com", role = c("aut", "cre", "cph"),
            comment = c(ORCID = "0000-0001-8457-4658")),
     person("Dewey", "Dunnington", role = "ctb",
-           comment = c(ORCID = "0000-0002-9415-4582", "for ggspatial code"))
+           comment = c(ORCID = "0000-0002-9415-4582", "for ggspatial code")),
+    person("ggplot2 authors", role = "cph",
+           comment = "for ggspatial code")
   )
 Description: Extension of the 'tidyverse' for 'SpatRaster' and
     'SpatVector' objects of the 'terra' package. It includes also new
