--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -18,20 +18,20 @@ URL: https://dieghernan.github.io/tidyterra/,
     https://github.com/dieghernan/tidyterra
 BugReports: https://github.com/dieghernan/tidyterra/issues
 Depends: 
-    R (>= 3.6.0)
+    dplyr (>= 1.0.0),
+    R (>= 3.6.0),
+    tibble (>= 3.0.0),
+    tidyr (>= 1.0.0)
 Imports: 
     cli (>= 3.0.0),
     crayon,
     data.table,
-    dplyr,
     ggplot2 (>= 3.1.0),
     magrittr,
     rlang,
     scales,
     sf (>= 1.0.0),
-    terra (>= 1.5-12),
-    tibble,
-    tidyr
+    terra (>= 1.5-12)
 Suggests: 
     isoband,
     knitr,
@@ -40,6 +40,7 @@ Suggests:
     rmarkdown,
     s2,
     testthat (>= 3.0.0),
+    tidyverse,
     vdiffr
 VignetteBuilder: 
     knitr
