--- a/.github/workflows/pkgdown-gh-pages.yaml
+++ b/.github/workflows/pkgdown-gh-pages.yaml
@@ -28,6 +28,8 @@ jobs:
           extra-packages: |
             local::.
             any::pkgdown
+            any::geodata
+            any::metR
           needs: website
 
       - name: Deploy package
