--- a/.github/workflows/pkgdown-gh-pages-clean.yaml
+++ b/.github/workflows/pkgdown-gh-pages-clean.yaml
@@ -23,6 +23,8 @@ jobs:
           extra-packages: |
             local::.
             any::pkgdown
+            any::geodata
+            any::metR
           needs: website
 
       - name: Deploy package
