--- a/NAMESPACE
+++ b/NAMESPACE
@@ -79,6 +79,7 @@ export(scale_fill_wiki_d)
 export(slice_colrows)
 export(slice_cols)
 export(slice_rows)
+export(stat_spatraster)
 export(whitebox.colors)
 export(wiki.colors)
 importFrom(dplyr,everything)
