--- a/.github/workflows/update-docs.yaml
+++ b/.github/workflows/update-docs.yaml
@@ -34,7 +34,7 @@ jobs:
       - name: Update docs
         run: |
 
-          pkgdev::update_docs()
+          pkgdev::update_docs(precompute = FALSE)
 
         shell: Rscript {0}
 
