--- a/NAMESPACE
+++ b/NAMESPACE
@@ -41,9 +41,12 @@ S3method(transmute,SpatVector)
 export("%>%")
 export(as_coordinates)
 export(as_spatraster)
+export(as_tibble)
 export(compare_spatrasters)
 export(cross_blended.colors)
 export(cross_blended.colors2)
+export(drop_na)
+export(filter)
 export(geom_spatraster)
 export(geom_spatraster_contour)
 export(geom_spatraster_contour_filled)
@@ -54,7 +57,13 @@ export(geom_spatvector_text)
 export(hypso.colors)
 export(hypso.colors2)
 export(is_regular_grid)
+export(mutate)
+export(pull)
 export(pull_crs)
+export(relocate)
+export(rename)
+export(rename_with)
+export(replace_na)
 export(scale_fill_cross_blended_b)
 export(scale_fill_cross_blended_c)
 export(scale_fill_cross_blended_d)
@@ -76,10 +85,18 @@ export(scale_fill_whitebox_d)
 export(scale_fill_wiki_b)
 export(scale_fill_wiki_c)
 export(scale_fill_wiki_d)
+export(select)
+export(slice)
 export(slice_colrows)
 export(slice_cols)
+export(slice_head)
+export(slice_max)
+export(slice_min)
 export(slice_rows)
+export(slice_sample)
+export(slice_tail)
 export(stat_spatraster)
+export(transmute)
 export(whitebox.colors)
 export(wiki.colors)
 importFrom(dplyr,everything)
