--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,7 @@ S3method(drop_na,SpatRaster)
 S3method(drop_na,SpatVector)
 S3method(filter,SpatRaster)
 S3method(filter,SpatVector)
+S3method(fortify,SpatVector)
 S3method(mutate,SpatRaster)
 S3method(mutate,SpatVector)
 S3method(pull,SpatRaster)
@@ -47,6 +48,7 @@ export(cross_blended.colors)
 export(cross_blended.colors2)
 export(drop_na)
 export(filter)
+export(fortify)
 export(geom_spatraster)
 export(geom_spatraster_contour)
 export(geom_spatraster_contour_filled)
@@ -95,7 +97,9 @@ export(slice_min)
 export(slice_rows)
 export(slice_sample)
 export(slice_tail)
+export(stat_spat_coordinates)
 export(stat_spatraster)
+export(stat_spatvector)
 export(transmute)
 export(whitebox.colors)
 export(wiki.colors)
@@ -117,6 +121,7 @@ importFrom(dplyr,transmute)
 importFrom(ggplot2,aes)
 importFrom(ggplot2,alpha)
 importFrom(ggplot2,autoplot)
+importFrom(ggplot2,fortify)
 importFrom(grDevices,rgb)
 importFrom(grDevices,terrain.colors)
 importFrom(magrittr,"%>%")
