--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,10 +3,12 @@
 S3method(as_tibble,SpatRaster)
 S3method(as_tibble,SpatVector)
 S3method(autoplot,SpatRaster)
+S3method(autoplot,SpatVector)
 S3method(drop_na,SpatRaster)
 S3method(drop_na,SpatVector)
 S3method(filter,SpatRaster)
 S3method(filter,SpatVector)
+S3method(fortify,SpatRaster)
 S3method(fortify,SpatVector)
 S3method(mutate,SpatRaster)
 S3method(mutate,SpatVector)
@@ -43,6 +45,7 @@ export("%>%")
 export(as_coordinates)
 export(as_spatraster)
 export(as_tibble)
+export(autoplot)
 export(compare_spatrasters)
 export(cross_blended.colors)
 export(cross_blended.colors2)
