Some done, still miss hypso

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -69,6 +69,36 @@ export(relocate)
 export(rename)
 export(rename_with)
 export(replace_na)
+export(scale_color_cross_blended_b)
+export(scale_color_cross_blended_c)
+export(scale_color_cross_blended_d)
+export(scale_color_cross_blended_tint_b)
+export(scale_color_cross_blended_tint_c)
+export(scale_color_cross_blended_tint_d)
+export(scale_color_terrain_b)
+export(scale_color_terrain_c)
+export(scale_color_terrain_d)
+export(scale_color_whitebox_b)
+export(scale_color_whitebox_c)
+export(scale_color_whitebox_d)
+export(scale_color_wiki_b)
+export(scale_color_wiki_c)
+export(scale_color_wiki_d)
+export(scale_colour_cross_blended_b)
+export(scale_colour_cross_blended_c)
+export(scale_colour_cross_blended_d)
+export(scale_colour_cross_blended_tint_b)
+export(scale_colour_cross_blended_tint_c)
+export(scale_colour_cross_blended_tint_d)
+export(scale_colour_terrain_b)
+export(scale_colour_terrain_c)
+export(scale_colour_terrain_d)
+export(scale_colour_whitebox_b)
+export(scale_colour_whitebox_c)
+export(scale_colour_whitebox_d)
+export(scale_colour_wiki_b)
+export(scale_colour_wiki_c)
+export(scale_colour_wiki_d)
 export(scale_fill_cross_blended_b)
 export(scale_fill_cross_blended_c)
 export(scale_fill_cross_blended_d)
