End with new scale_colors

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -75,6 +75,12 @@ export(scale_color_cross_blended_d)
 export(scale_color_cross_blended_tint_b)
 export(scale_color_cross_blended_tint_c)
 export(scale_color_cross_blended_tint_d)
+export(scale_color_hypso_b)
+export(scale_color_hypso_c)
+export(scale_color_hypso_d)
+export(scale_color_hypso_tint_b)
+export(scale_color_hypso_tint_c)
+export(scale_color_hypso_tint_d)
 export(scale_color_terrain_b)
 export(scale_color_terrain_c)
 export(scale_color_terrain_d)
@@ -90,6 +96,12 @@ export(scale_colour_cross_blended_d)
 export(scale_colour_cross_blended_tint_b)
 export(scale_colour_cross_blended_tint_c)
 export(scale_colour_cross_blended_tint_d)
+export(scale_colour_hypso_b)
+export(scale_colour_hypso_c)
+export(scale_colour_hypso_d)
+export(scale_colour_hypso_tint_b)
+export(scale_colour_hypso_tint_c)
+export(scale_colour_hypso_tint_d)
 export(scale_colour_terrain_b)
 export(scale_colour_terrain_c)
 export(scale_colour_terrain_d)
