Cleanup caches on actions

--- a/.github/workflows/check-full.yaml
+++ b/.github/workflows/check-full.yaml
@@ -50,6 +50,7 @@ jobs:
 
       - uses: r-lib/actions/setup-r-dependencies@v2
         with:
+          cache-version: check
           extra-packages: any::rcmdcheck
           needs: check
 
