--- a/.github/workflows/check-terra-devel.yaml
+++ b/.github/workflows/check-terra-devel.yaml
@@ -42,6 +42,7 @@ jobs:
 
       - uses: r-lib/actions/setup-r-dependencies@v2
         with:
+          cache-version: terra-devel
           extra-packages: any::rcmdcheck
           needs: check
 
