--- a/.github/workflows/pkgdown-gh-pages.yaml
+++ b/.github/workflows/pkgdown-gh-pages.yaml
@@ -10,7 +10,7 @@ name: pkgdown-gh-pages
 
 jobs:
   pkgdown-gh-pages:
-    runs-on: windows-latest
+    runs-on: macos-latest
     env:
       GITHUB_PAT: ${{ secrets.GITHUB_TOKEN }}
     steps:
@@ -25,6 +25,7 @@ jobs:
 
       - uses: r-lib/actions/setup-r-dependencies@v2
         with:
+          cache-version: pkgdown
           extra-packages: |
             local::.
             any::pkgdown
