--- a/.github/workflows/pkgdown-gh-pages-clean.yaml
+++ b/.github/workflows/pkgdown-gh-pages-clean.yaml
@@ -5,9 +5,10 @@ name: Clean pkgdown manually
 
 jobs:
   pkgdown-gh-pages-manual:
-    runs-on: ubuntu-latest
+    runs-on: windows-latest
     env:
       GITHUB_PAT: ${{ secrets.GITHUB_TOKEN }}
+      CURL_SSL_BACKEND: "openssl"
     steps:
       - uses: actions/checkout@v3
 
@@ -16,7 +17,7 @@ jobs:
       - uses: r-lib/actions/setup-r@v2
         with:
           use-public-rspm: true
-          install-r: false
+          install-r: true
 
       - uses: r-lib/actions/setup-r-dependencies@v2
         with:
