--- a/.github/workflows/pkgdown-gh-pages.yaml
+++ b/.github/workflows/pkgdown-gh-pages.yaml
@@ -10,9 +10,10 @@ name: pkgdown-gh-pages
 
 jobs:
   pkgdown-gh-pages:
-    runs-on: ubuntu-latest
+    runs-on: windows-latest
     env:
       GITHUB_PAT: ${{ secrets.GITHUB_TOKEN }}
+      CURL_SSL_BACKEND: "openssl"
     steps:
       - uses: actions/checkout@v3
 
@@ -21,7 +22,7 @@ jobs:
       - uses: r-lib/actions/setup-r@v2
         with:
           use-public-rspm: true
-          install-r: false
+          install-r: true
 
       - uses: r-lib/actions/setup-r-dependencies@v2
         with:
