--- a/.github/workflows/update-docs.yaml
+++ b/.github/workflows/update-docs.yaml
@@ -5,9 +5,10 @@ name: update-docs
 
 jobs:
   update-docs:
-    runs-on: ubuntu-latest
+    runs-on: windows-latest
     env:
       GITHUB_PAT: ${{ secrets.GITHUB_TOKEN }}
+      CURL_SSL_BACKEND: "openssl"
     steps:
       - uses: actions/checkout@v3
 
@@ -16,6 +17,7 @@ jobs:
       - uses: r-lib/actions/setup-r@v2
         with:
           use-public-rspm: true
+          install-r: true
 
 
       - uses: r-lib/actions/setup-r-dependencies@v2
