Fix for new ggplot2 release

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -164,6 +164,7 @@ importFrom(dplyr,slice_sample)
 importFrom(dplyr,slice_tail)
 importFrom(dplyr,transmute)
 importFrom(ggplot2,aes)
+importFrom(ggplot2,after_stat)
 importFrom(ggplot2,alpha)
 importFrom(ggplot2,autoplot)
 importFrom(ggplot2,fortify)
