--- a/.github/workflows/update-docs.yaml
+++ b/.github/workflows/update-docs.yaml
@@ -38,6 +38,8 @@ jobs:
         run: |
 
           pkgdev::update_docs(precompute = FALSE)
+          # Regenerate svgs
+          testhat::test_local()
 
         shell: Rscript {0}
 
