Try best practices with non-standard evaluation (#63)
* Try best practices with non-standard evaluation

* Run local tests

* Update docs

* Update docs with pkgdev

Co-authored-by: Diego H <dieghernan@users.noreply.github.com>

--- a/.github/workflows/update-docs.yaml
+++ b/.github/workflows/update-docs.yaml
@@ -38,6 +38,8 @@ jobs:
         run: |
 
           pkgdev::update_docs(precompute = FALSE)
+          # Regenerate svgs
+          testthat::test_local()
 
         shell: Rscript {0}
 
