--- a/.github/workflows/update-docs.yaml
+++ b/.github/workflows/update-docs.yaml
@@ -5,7 +5,7 @@ name: update-docs
 
 jobs:
   update-docs:
-    runs-on: windows-latest
+    runs-on: macos-latest
     env:
       GITHUB_PAT: ${{ secrets.GITHUB_TOKEN }}
       CURL_SSL_BACKEND: "openssl"
