--- a/.github/workflows/revdepcheck.yaml
+++ b/.github/workflows/revdepcheck.yaml
@@ -55,8 +55,8 @@ jobs:
 
       - name: Commit results
         run: |
-          git config --local user.name "$GITHUB_ACTOR"
-          git config --local user.email "$GITHUB_ACTOR@users.noreply.github.com"
+          git config --local user.name "github-actions[bot]"
+          git config --local user.email "41898282+github-actions[bot]@users.noreply.github.com"
           git add -A
           git commit -m 'revdepcheck' || echo "No changes to commit"
           git push origin || echo "No changes to commit"
