--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,8 +12,11 @@ S3method(filter,SpatRaster)
 S3method(filter,SpatVector)
 S3method(fortify,SpatRaster)
 S3method(fortify,SpatVector)
+S3method(full_join,SpatVector)
 S3method(glimpse,SpatRaster)
 S3method(glimpse,SpatVector)
+S3method(inner_join,SpatVector)
+S3method(left_join,SpatVector)
 S3method(mutate,SpatRaster)
 S3method(mutate,SpatVector)
 S3method(pull,SpatRaster)
@@ -26,6 +29,7 @@ S3method(rename_with,SpatRaster)
 S3method(rename_with,SpatVector)
 S3method(replace_na,SpatRaster)
 S3method(replace_na,SpatVector)
+S3method(right_join,SpatVector)
 S3method(select,SpatRaster)
 S3method(select,SpatVector)
 S3method(slice,SpatRaster)
@@ -58,6 +62,7 @@ export(distinct)
 export(drop_na)
 export(filter)
 export(fortify)
+export(full_join)
 export(geom_spatraster)
 export(geom_spatraster_contour)
 export(geom_spatraster_contour_filled)
@@ -68,7 +73,9 @@ export(geom_spatvector_text)
 export(glimpse)
 export(hypso.colors)
 export(hypso.colors2)
+export(inner_join)
 export(is_regular_grid)
+export(left_join)
 export(mutate)
 export(pull)
 export(pull_crs)
@@ -76,6 +83,7 @@ export(relocate)
 export(rename)
 export(rename_with)
 export(replace_na)
+export(right_join)
 export(scale_color_cross_blended_b)
 export(scale_color_cross_blended_c)
 export(scale_color_cross_blended_d)
@@ -159,12 +167,16 @@ importFrom(dplyr,arrange)
 importFrom(dplyr,distinct)
 importFrom(dplyr,everything)
 importFrom(dplyr,filter)
+importFrom(dplyr,full_join)
 importFrom(dplyr,glimpse)
+importFrom(dplyr,inner_join)
+importFrom(dplyr,left_join)
 importFrom(dplyr,mutate)
 importFrom(dplyr,pull)
 importFrom(dplyr,relocate)
 importFrom(dplyr,rename)
 importFrom(dplyr,rename_with)
+importFrom(dplyr,right_join)
 importFrom(dplyr,select)
 importFrom(dplyr,slice)
 importFrom(dplyr,slice_head)
