Start profiling groups

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -16,6 +16,7 @@ S3method(fortify,SpatVector)
 S3method(full_join,SpatVector)
 S3method(glimpse,SpatRaster)
 S3method(glimpse,SpatVector)
+S3method(group_by,SpatVector)
 S3method(inner_join,SpatVector)
 S3method(left_join,SpatVector)
 S3method(mutate,SpatRaster)
@@ -74,6 +75,7 @@ export(geom_spatvector)
 export(geom_spatvector_label)
 export(geom_spatvector_text)
 export(glimpse)
+export(group_by)
 export(hypso.colors)
 export(hypso.colors2)
 export(inner_join)
@@ -174,6 +176,7 @@ importFrom(dplyr,everything)
 importFrom(dplyr,filter)
 importFrom(dplyr,full_join)
 importFrom(dplyr,glimpse)
+importFrom(dplyr,group_by)
 importFrom(dplyr,inner_join)
 importFrom(dplyr,left_join)
 importFrom(dplyr,mutate)
