Add group support

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -17,10 +17,17 @@ S3method(full_join,SpatVector)
 S3method(glimpse,SpatRaster)
 S3method(glimpse,SpatVector)
 S3method(group_by,SpatVector)
+S3method(group_data,SpatVector)
+S3method(group_indices,SpatVector)
+S3method(group_keys,SpatVector)
+S3method(group_size,SpatVector)
+S3method(group_vars,SpatVector)
+S3method(groups,SpatVector)
 S3method(inner_join,SpatVector)
 S3method(left_join,SpatVector)
 S3method(mutate,SpatRaster)
 S3method(mutate,SpatVector)
+S3method(n_groups,SpatVector)
 S3method(pull,SpatRaster)
 S3method(pull,SpatVector)
 S3method(relocate,SpatRaster)
@@ -52,6 +59,7 @@ S3method(slice_tail,SpatRaster)
 S3method(slice_tail,SpatVector)
 S3method(transmute,SpatRaster)
 S3method(transmute,SpatVector)
+S3method(ungroup,SpatVector)
 export("%>%")
 export(anti_join)
 export(arrange)
@@ -76,12 +84,20 @@ export(geom_spatvector_label)
 export(geom_spatvector_text)
 export(glimpse)
 export(group_by)
+export(group_data)
+export(group_indices)
+export(group_keys)
+export(group_rows.SpatVector)
+export(group_size)
+export(group_vars)
+export(groups)
 export(hypso.colors)
 export(hypso.colors2)
 export(inner_join)
 export(is_regular_grid)
 export(left_join)
 export(mutate)
+export(n_groups)
 export(pull)
 export(pull_crs)
 export(relocate)
@@ -167,6 +183,7 @@ export(stat_spat_coordinates)
 export(stat_spatraster)
 export(stat_spatvector)
 export(transmute)
+export(ungroup)
 export(whitebox.colors)
 export(wiki.colors)
 importFrom(dplyr,anti_join)
@@ -177,9 +194,17 @@ importFrom(dplyr,filter)
 importFrom(dplyr,full_join)
 importFrom(dplyr,glimpse)
 importFrom(dplyr,group_by)
+importFrom(dplyr,group_data)
+importFrom(dplyr,group_indices)
+importFrom(dplyr,group_keys)
+importFrom(dplyr,group_rows)
+importFrom(dplyr,group_size)
+importFrom(dplyr,group_vars)
+importFrom(dplyr,groups)
 importFrom(dplyr,inner_join)
 importFrom(dplyr,left_join)
 importFrom(dplyr,mutate)
+importFrom(dplyr,n_groups)
 importFrom(dplyr,pull)
 importFrom(dplyr,relocate)
 importFrom(dplyr,rename)
@@ -194,6 +219,7 @@ importFrom(dplyr,slice_min)
 importFrom(dplyr,slice_sample)
 importFrom(dplyr,slice_tail)
 importFrom(dplyr,transmute)
+importFrom(dplyr,ungroup)
 importFrom(ggplot2,aes)
 importFrom(ggplot2,after_stat)
 importFrom(ggplot2,alpha)
