Add internal coercion system for SpatVectors

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -65,6 +65,7 @@ export(anti_join)
 export(arrange)
 export(as_coordinates)
 export(as_spatraster)
+export(as_spatvector)
 export(as_tibble)
 export(autoplot)
 export(compare_spatrasters)
@@ -87,6 +88,7 @@ export(group_by)
 export(group_data)
 export(group_indices)
 export(group_keys)
+export(group_rows)
 export(group_rows.SpatVector)
 export(group_size)
 export(group_vars)
