New coercing method

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -68,6 +68,7 @@ export("%>%")
 export(anti_join)
 export(arrange)
 export(as_coordinates)
+export(as_sf)
 export(as_spatraster)
 export(as_spatvector)
 export(as_tibble)
