--- a/NAMESPACE
+++ b/NAMESPACE
@@ -101,6 +101,7 @@ export(groups)
 export(hypso.colors)
 export(hypso.colors2)
 export(inner_join)
+export(is_grouped_spatvector)
 export(is_regular_grid)
 export(left_join)
 export(mutate)
