--- a/pkgdown/_pkgdown.yml
+++ b/pkgdown/_pkgdown.yml
@@ -67,21 +67,42 @@ template:
         </script>
 
 reference:
-- title: "tidyverse methods"
-  desc: Methods for {tidyverse} packages
-- subtitle: "tibble methods"
+- title: "tibble methods"
   desc:  Methods from {tibble} implemented for Spat* objects.
   contents:
     - has_concept("tibble.methods")
-- subtitle: "dplyr methods"
+- title: "dplyr methods"
   desc:  Methods from {dplyr} implemented for Spat* objects.
+- subtitle: Rows
+  desc: >
+    Verbs that principally operate on rows.
   contents:
-    - has_concept("dplyr.methods")
-- subtitle: "tidyr methods"
+  - has_concept("dplyr.rows")
+- subtitle: Columns
+  desc: >
+    Verbs that principally operate on columns.
+  contents:
+  - has_concept("dplyr.cols")
+- subtitle: Groups
+  desc: >
+    Verbs that principally operate on groups of rows.
+  contents:
+  - has_concept("dplyr.groups")
+- subtitle: Spat* and Data frames
+  desc: >
+    Verbs that principally operate on pairs of Spat* and data frames.
+  contents:
+  - has_concept("dplyr.pairs")
+- title: "tidyr methods"
   desc:  Methods from {tidyr} implemented for Spat* objects.
+- subtitle: Missing values
+  description: |
+    Tools for converting between implicit (absent rows) and explicit (`NA`)
+    missing values, and for handling explicit `NA`s.
   contents:
-    - has_concept("tidyr.methods")
-- subtitle: "ggplot2 methods"
+  - drop_na.SpatVector
+  - replace_na.Spat
+- title: "ggplot2 methods"
   desc:  Methods from {ggplot2} implemented for Spat* objects.
   contents:
     - has_concept("ggplot2.methods")
@@ -90,11 +111,11 @@ reference:
 - subtitle: Geoms
   desc:  Create {ggplot2} layers for Spat* objects.
   contents:
-    - has_concept("ggplot2.utils")
+    - starts_with("geom_")
 - subtitle: Scales
   desc: Gradient colour schemes, palettes and hypsometric tints.
   contents:
-    - has_concept("gradients")
+    - starts_with("scale_")
 - title: "Helpers"
   desc:  Additional set of functions provided by {tidyterra}.
 - subtitle: "Coercing objects"
@@ -104,10 +125,9 @@ reference:
 - subtitle: "Other helpers"
   contents:
     - has_concept("helpers")
-- subtitle: "Other functions and datasets"
-  desc: Miscelanea
+- title: Built in data
   contents:
-    - lacks_concepts(c("tibble.methods", "dplyr.methods", "tidyr.methods", "ggplot2.utils", "helpers", "coerce", "gradients"))
+  - has_concept("datasets")
 - title: "About the package"
   contents:
     - tidyterra-package
