Add summarise support

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -61,6 +61,8 @@ S3method(slice_sample,SpatRaster)
 S3method(slice_sample,SpatVector)
 S3method(slice_tail,SpatRaster)
 S3method(slice_tail,SpatVector)
+S3method(summarise,SpatVector)
+S3method(summarize,SpatVector)
 S3method(transmute,SpatRaster)
 S3method(transmute,SpatVector)
 S3method(ungroup,SpatVector)
@@ -190,6 +192,8 @@ export(slice_tail)
 export(stat_spat_coordinates)
 export(stat_spatraster)
 export(stat_spatvector)
+export(summarise)
+export(summarize)
 export(transmute)
 export(ungroup)
 export(whitebox.colors)
@@ -226,6 +230,8 @@ importFrom(dplyr,slice_max)
 importFrom(dplyr,slice_min)
 importFrom(dplyr,slice_sample)
 importFrom(dplyr,slice_tail)
+importFrom(dplyr,summarise)
+importFrom(dplyr,summarize)
 importFrom(dplyr,transmute)
 importFrom(dplyr,ungroup)
 importFrom(ggplot2,aes)
