Add example for groups

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -67,6 +67,7 @@ S3method(transmute,SpatRaster)
 S3method(transmute,SpatVector)
 S3method(ungroup,SpatVector)
 export("%>%")
+export(aes)
 export(anti_join)
 export(arrange)
 export(as_coordinates)
