--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,6 +10,7 @@ S3method(as_tibble,SpatRaster)
 S3method(as_tibble,SpatVector)
 S3method(autoplot,SpatRaster)
 S3method(autoplot,SpatVector)
+S3method(count,SpatVector)
 S3method(distinct,SpatVector)
 S3method(drop_na,SpatRaster)
 S3method(drop_na,SpatVector)
@@ -63,6 +64,7 @@ S3method(slice_tail,SpatRaster)
 S3method(slice_tail,SpatVector)
 S3method(summarise,SpatVector)
 S3method(summarize,SpatVector)
+S3method(tally,SpatVector)
 S3method(transmute,SpatRaster)
 S3method(transmute,SpatVector)
 S3method(ungroup,SpatVector)
@@ -77,6 +79,7 @@ export(as_spatvector)
 export(as_tibble)
 export(autoplot)
 export(compare_spatrasters)
+export(count)
 export(cross_blended.colors)
 export(cross_blended.colors2)
 export(distinct)
@@ -195,12 +198,14 @@ export(stat_spatraster)
 export(stat_spatvector)
 export(summarise)
 export(summarize)
+export(tally)
 export(transmute)
 export(ungroup)
 export(whitebox.colors)
 export(wiki.colors)
 importFrom(dplyr,anti_join)
 importFrom(dplyr,arrange)
+importFrom(dplyr,count)
 importFrom(dplyr,distinct)
 importFrom(dplyr,everything)
 importFrom(dplyr,filter)
@@ -233,6 +238,7 @@ importFrom(dplyr,slice_sample)
 importFrom(dplyr,slice_tail)
 importFrom(dplyr,summarise)
 importFrom(dplyr,summarize)
+importFrom(dplyr,tally)
 importFrom(dplyr,transmute)
 importFrom(dplyr,ungroup)
 importFrom(ggplot2,aes)
