--- a/NAMESPACE
+++ b/NAMESPACE
@@ -96,6 +96,7 @@ export(geom_spatvector_label)
 export(geom_spatvector_text)
 export(glimpse)
 export(group_by)
+export(group_by_drop_default)
 export(group_data)
 export(group_indices)
 export(group_keys)
@@ -212,6 +213,7 @@ importFrom(dplyr,filter)
 importFrom(dplyr,full_join)
 importFrom(dplyr,glimpse)
 importFrom(dplyr,group_by)
+importFrom(dplyr,group_by_drop_default)
 importFrom(dplyr,group_data)
 importFrom(dplyr,group_indices)
 importFrom(dplyr,group_keys)
