Add bind_spat cols and rows

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -78,6 +78,8 @@ export(as_spatraster)
 export(as_spatvector)
 export(as_tibble)
 export(autoplot)
+export(bind_spat_cols)
+export(bind_spat_rows)
 export(compare_spatrasters)
 export(count)
 export(cross_blended.colors)
