--- a/NAMESPACE
+++ b/NAMESPACE
@@ -44,6 +44,7 @@ S3method(rename_with,SpatVector)
 S3method(replace_na,SpatRaster)
 S3method(replace_na,SpatVector)
 S3method(right_join,SpatVector)
+S3method(rowwise,SpatVector)
 S3method(select,SpatRaster)
 S3method(select,SpatVector)
 S3method(semi_join,SpatVector)
@@ -121,6 +122,7 @@ export(rename)
 export(rename_with)
 export(replace_na)
 export(right_join)
+export(rowwise)
 export(scale_color_cross_blended_b)
 export(scale_color_cross_blended_c)
 export(scale_color_cross_blended_d)
@@ -231,6 +233,7 @@ importFrom(dplyr,relocate)
 importFrom(dplyr,rename)
 importFrom(dplyr,rename_with)
 importFrom(dplyr,right_join)
+importFrom(dplyr,rowwise)
 importFrom(dplyr,select)
 importFrom(dplyr,semi_join)
 importFrom(dplyr,slice)
