--- a/.github/workflows/pkgdown-gh-pages-clean.yaml
+++ b/.github/workflows/pkgdown-gh-pages-clean.yaml
@@ -26,6 +26,7 @@ jobs:
             local::.
             any::pkgdown
             any::metR
+            Nowosad/spDataLarge
           needs: website
 
       - name: Deploy package
