--- a/.github/workflows/pkgdown-gh-pages.yaml
+++ b/.github/workflows/pkgdown-gh-pages.yaml
@@ -31,6 +31,7 @@ jobs:
             local::.
             any::pkgdown
             any::metR
+            Nowosad/spDataLarge
           needs: website
 
       - name: Deploy package
