--- a/.github/workflows/update-docs.yaml
+++ b/.github/workflows/update-docs.yaml
@@ -29,6 +29,7 @@ jobs:
             any::rcmdcheck
             any::pkgdown
             any::metR
+            Nowosad/spDataLarge
             dieghernan/pkgdev
 
           needs: website
