--- a/NAMESPACE
+++ b/NAMESPACE
@@ -81,6 +81,7 @@ export(as_tibble)
 export(autoplot)
 export(bind_spat_cols)
 export(bind_spat_rows)
+export(coltab_palette)
 export(compare_spatrasters)
 export(count)
 export(cross_blended.colors)
