--- a/NAMESPACE
+++ b/NAMESPACE
@@ -81,7 +81,6 @@ export(as_tibble)
 export(autoplot)
 export(bind_spat_cols)
 export(bind_spat_rows)
-export(coltab_palette)
 export(compare_spatrasters)
 export(count)
 export(cross_blended.colors)
@@ -98,6 +97,7 @@ export(geom_spatraster_rgb)
 export(geom_spatvector)
 export(geom_spatvector_label)
 export(geom_spatvector_text)
+export(get_coltab_pal)
 export(glimpse)
 export(group_by)
 export(group_by_drop_default)
@@ -124,6 +124,7 @@ export(rename_with)
 export(replace_na)
 export(right_join)
 export(rowwise)
+export(scale_color_coltab)
 export(scale_color_cross_blended_b)
 export(scale_color_cross_blended_c)
 export(scale_color_cross_blended_d)
@@ -145,6 +146,7 @@ export(scale_color_whitebox_d)
 export(scale_color_wiki_b)
 export(scale_color_wiki_c)
 export(scale_color_wiki_d)
+export(scale_colour_coltab)
 export(scale_colour_cross_blended_b)
 export(scale_colour_cross_blended_c)
 export(scale_colour_cross_blended_d)
@@ -166,6 +168,7 @@ export(scale_colour_whitebox_d)
 export(scale_colour_wiki_b)
 export(scale_colour_wiki_c)
 export(scale_colour_wiki_d)
+export(scale_fill_coltab)
 export(scale_fill_cross_blended_b)
 export(scale_fill_cross_blended_c)
 export(scale_fill_cross_blended_d)
