--- a/NAMESPACE
+++ b/NAMESPACE
@@ -256,6 +256,7 @@ importFrom(ggplot2,after_stat)
 importFrom(ggplot2,alpha)
 importFrom(ggplot2,autoplot)
 importFrom(ggplot2,fortify)
+importFrom(grDevices,col2rgb)
 importFrom(grDevices,rgb)
 importFrom(grDevices,terrain.colors)
 importFrom(magrittr,"%>%")
