Update up to autoplot

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -211,6 +211,7 @@ export(transmute)
 export(ungroup)
 export(whitebox.colors)
 export(wiki.colors)
+importFrom(cli,qty)
 importFrom(dplyr,anti_join)
 importFrom(dplyr,arrange)
 importFrom(dplyr,count)
