--- a/pkgdown/_pkgdown.yml
+++ b/pkgdown/_pkgdown.yml
@@ -4,12 +4,7 @@ figures:
   dpi: 300
   fig.retina: 2
 
-development:
-  mode: auto
-
 navbar:
-  type: dark
-  bg: primary
   structure:
     left:
       - intro
@@ -45,27 +40,16 @@ navbar:
       icon: fa-twitter
       href: 'http://twitter.com/dhernangomez'
       aria-label: Twitter
+
 template:
-  bootstrap: 5
-  bslib:
-    primary: "#516a54"
-    code_font: {google: "Roboto Mono"}
+  package: gitdevr
+  params:
+    ganalytics: G-KRDM62G8K4   
   opengraph:
     twitter:
       creator: '@dhernangomez'
       card: summary_large_image
-  includes:
-      in_header: |
-        <!-- Global site tag (gtag.js) - Google Analytics -->
-        <script async src="https://www.googletagmanager.com/gtag/js?id=G-KRDM62G8K4"></script>
-        <script>
-          window.dataLayer = window.dataLayer || [];
-          function gtag(){dataLayer.push(arguments);}
-          gtag('js', new Date());
-
-          gtag('config', 'G-KRDM62G8K4');
-        </script>
-
+ 
 reference:
 - title: "tibble methods"
   desc:  Methods from {tibble} implemented for Spat* objects.
@@ -131,3 +115,7 @@ reference:
 - title: "About the package"
   contents:
     - tidyterra-package
+
+authors:
+  Diego Hernangómez:
+    href: https://dieghernan.github.io/
