--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -46,6 +46,7 @@ Config/Needs/coverage: covr
 Config/Needs/website: geodata, metR
 Config/testthat/edition: 3
 Config/testthat/parallel: true
+Config/Needs/website: geodata, metR, dieghernan/gitdevr, ragg, styler
 Encoding: UTF-8
 LazyData: true
 Roxygen: list(markdown = TRUE)
