--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -43,7 +43,7 @@ Suggests:
 VignetteBuilder: 
     knitr
 Config/Needs/coverage: covr
-Config/Needs/website: geodata, metR, dieghernan/gitdevr
+Config/Needs/website: geodata, metR, dieghernan/gitdevr, ragg, styler
 Config/testthat/edition: 3
 Config/testthat/parallel: true
 Encoding: UTF-8
