--- a/pkgdown/_pkgdown.yml
+++ b/pkgdown/_pkgdown.yml
@@ -4,6 +4,9 @@ figures:
   dpi: 300
   fig.retina: 2
 
+development:
+  mode: auto
+
 navbar:
   structure:
     left:
@@ -44,12 +47,12 @@ navbar:
 template:
   package: gitdevr
   params:
-    ganalytics: G-KRDM62G8K4   
+    ganalytics: G-KRDM62G8K4
   opengraph:
     twitter:
       creator: '@dhernangomez'
       card: summary_large_image
- 
+
 reference:
 - title: "tibble methods"
   desc:  Methods from {tibble} implemented for Spat* objects.
